# neural_net_physics_tf

./: .gitignore  README.md  nn_modules.ipynb  pyproject.toml  restore_pre.py  save_model.py  save_models.ipynb  shallow_water.py  training.py  training_dan.py  training_keras.py  training_manual.py
src/: bayes.py  ekf.py  experiments.py  formatting.py  fourier_basis.py  iterators.py  layers.py  math_helpers.py  meth.py  models.py  physical_models.py  plots.py  sim_iterator.py  utils.py
