[project]
name = "neural_net_physics_tf"
version = "0.0.1"
description = "backend model training code for CFlowSim project, TensorFlow version"
authors = [
    {name = "techlancher-mlai-edge-physics", email = "example@example.com"},
]
dependencies = [
    "phiflow>=2.4.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.2",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.4",
    "dill>=0.3.7",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "einops>=0.6.1",
    "tensorboard>=2.12.3",
    "tensorflow>=2.13.0",
    "pydot>=1.4.2",
    "tensorflowjs>=4.10.0",
    "tensorflow-addons>=0.21.0",
]
requires-python = ">=3.9,<3.11"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[tool.pdm.resolution.overrides]
packaging = ">=21.3"
